--- a/app-config.yaml
+++ b/app-config.yaml
@@ -86,6 +86,12 @@ catalog:
       rules:
         - allow: [Template]
 
+    # Local example template
+    - type: file
+      target: ../../examples/template/s3.yaml
+      rules:
+        - allow: [Template]
+
     # Local example organizational data
     - type: file
       target: ../../examples/org.yaml
